--- a/express/package.json
+++ b/express/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "prisma": "prisma generate",
-    "dev": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
     "cors": "^2.8.5",
     "express": "4.19.2",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
+    "@types/helmet": "^4.0.0",
     "@types/multer": "^1.4.11",
     "@types/node": "20.12.13",
     "prisma": "5.14.0",
